bugfix: В Сафари 11 бегунки имели черный фон и это не лечилось
установкой цвета бэкграунда, но помогло css-свойство will-change
по спекам выступающее как последнее прибежище в случаях проседания
производительности при смене css-свойств.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -633,6 +633,7 @@ $layerHeight: 2rem;
   width: 3em;
   height: 3em;
   animation: segment-spin .6s linear;
+  will-change: transform;
   animation-name: segment-spin;
   animation-duration: .6s;
   animation-timing-function: linear;
